@@ -1,10 +1,12 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
- [00 Trivial]
+ [00 Minor]
  - Rework dep_changes util to use CPAN::Meta::Prereqs::Diff
  - generated perlcritic generator uses misc/ now instead.
  - generated modules come with 5.008, utf8, AUTHORITY and bumpversion ready
+ - generated dist.ini comes with bumpversions enabled
+ - generated dist.ini comes with copylicense
 
  [Dependencies::Stats]
  - Dependencies changed since 2.016000, see misc/*.deps* for details
